docs: Diataxis refactor batch 5 — how-to guides (v2.6.0)
- customize-html-output → How-To: Configure Multi-Format Output
- integrate-with-frameworks: remove HTTP stack, update for v2.6.0
- pattern-matching, switch-expressions, text-blocks: update to v2.6.0 context
- performance-tuning: update for sayBenchmark + caching
- upload-files → How-To: sayRecordComponents
- use-cookies → How-To: sayEnvProfile
- use-custom-headers → How-To: sayDocCoverage
- use-virtual-threads: update for MultiRenderMachine + sayBenchmark

https://claude.ai/code/session_01Y8LUibcaDGLj74zvcefk1A